--- a/web_scraping/index.html
+++ b/web_scraping/index.html
@@ -49,7 +49,7 @@
 					<p>
 						<small><a href="https://alvarofpp.github.io">Álvaro Ferreira Pires de Paiva</a> / <a href="http://twitter.com/alvarofpp">@alvarofpp</a></small>
 					</p>
-					<a href="http://navi.ifrn.edu.br/"><img src="img/logo.jpg" /></a>
+					<a href="http://navi.ifrn.edu.br/"><img id="logo-evento" src="img/logo-evento.png" /></a>
 				</section>
 				<!-- Sumário -->
 				<section>
@@ -343,7 +343,7 @@ for link in soup.find_all('a'):
 				<section>
 					<h2>Alguma dúvida?</h2>
 					<div class="frase-final">
-						<h3 class="fragment">Mãos à obra!</h3>
+						<h3 class="fragment">Obrigado!</h3>
 					</div>
 				</section>
 			</div>
