Ajustes para enviar slide 1V3C

--- a/1v3c/index.html
+++ b/1v3c/index.html
@@ -46,16 +46,6 @@
 				<section data-background="img/bg-main.jpg" id="main-section">
 					<h1>Caminhos do saber</h1>
 					<h4>O melhor caminho para a sua formação!</h4>
-					<p>
-						<!--
-						<small>
-							<a href="https://alvarofpp.github.io">Álvaro Ferreira Pires</a><br/>
-							<a href="https://github.com/danielsouzaaf">Daniel Souza</a><br/>
-							<a href="https://github.com/itepifanio">Ítalo Epifânio</a><br/>
-							<a href="https://github.com/rdsilva">Rodrigo Silva</a>
-						</small>
-					-->
-					</p>
 				</section>
 				<!-- Problema -->
 				<section>
@@ -79,7 +69,17 @@
 					<div class="row">
 						<div class="col-md-1"></div>
 						<div class="col-md-10">
-							<img class="graph" src="img/projeto.png" />
+							<img class="graph" src="img/projeto1.png" />
+						</div>
+						<div class="col-md-1"></div>
+					</div>
+				</section>
+				<section>
+					<h2>Solução</h2>
+					<div class="row">
+						<div class="col-md-1"></div>
+						<div class="col-md-10">
+							<img class="graph" src="img/projeto2.png" />
 						</div>
 						<div class="col-md-1"></div>
 					</div>
@@ -99,7 +99,7 @@
 				<section>
 					<h2>Feedback do evento</h2>
 				</section>
-				<!-- Solução -->
+				<!-- Grupo -->
 				<section>
 					<h2>1V3C</h2>
 					<p>
